--- a/.github/workflows/EncodingToMKV.yml
+++ b/.github/workflows/EncodingToMKV.yml
@@ -91,7 +91,7 @@ jobs:
               -i input_video.mp4 \
               -vf "scale=1920:1080" \
               -c:v libaom-av1 \
-              -preset 8 \
+              -preset 12 \
               -crf 32 \
               -pix_fmt yuv420p10le \
               -c:a aac \
@@ -102,7 +102,7 @@ jobs:
               -i input_video.mp4 \
               -vf "scale=1920:1080" \
               -c:v libx265 \
-              -preset slow \
+              -preset ultrafast \
               -crf 23 \
               -pix_fmt yuv420p \
               -c:a aac \
